<resources>
    <string name="app_name">Eldritch Horror Assistant</string>
    <string name="main_header">My games</string>
    <string name="choose_date">Choose a date</string>
    <string name="ready">OK</string>
    <string name="date">Date</string>
    <string name="ancientOne">Ancient One</string>
    <string name="playersCount">Number of players</string>
    <string name="additionalRules">Additional rules</string>
    <string name="simpleMyths">Easy Mythos Cards</string>
    <string name="normalMyths">Normal Mythos cards</string>
    <string name="hardMyths">Hard Mythos Cards</string>
    <string name="startingRumor">Starting Rumor</string>
    <string name="next">Next</string>
    <string name="gatesCount">Number of open Gates on the game board</string>
    <string name="monstersCount">Number of Monsters on the game board</string>
    <string name="curseCount">Total number of \"Cursed\" or \"Dark Pact\" Conditions</string>
    <string name="rumorsCount">Number of Rumor Mythos card in play</string>
    <string name="cluesCount">Total number of Clue tokens investigators have</string>
    <string name="blessedCount">Total number of \"Blessed\" Conditions investigators have</string>
    <string name="doomCount">Current level of Doom</string>
    <string name="totalScore">Total score</string>
    <string name="saveResult">Save result</string>
    <string name="edit_result">Edit result</string>
    <string name="partyDetails">Details</string>
    <string name="gameResult">Result</string>
    <string name="win_or_defeat_header">Result</string>
    <string name="win_table_header">Scoring</string>
    <string name="defeat_table_header">Reasons for defeat</string>
    <string name="dialogAlert">Confirm</string>
    <string name="deleteDialogMessage">Do you want to delete the game result?</string>
    <string name="cleanDialogMessage">Do you want to clean the list of investigators?</string>
    <string name="messageOK">Yes</string>
    <string name="messageCancel">No</string>
    <string name="activity_party_details_header">Details</string>
    <string name="activity_add_party_header">Initial data</string>
    <string name="activity_investigators_choice_header">Investigators</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="starting_game">Initial team</string>
    <string name="replacement">Replacement</string>
    <string name="dead">Out of the game</string>
    <string name="starting_game_female">Initial team</string>
    <string name="replacement_female">Replacement</string>
    <string name="dead_female">Out of the game</string>
    <string name="initial_conditions">Initial conditions</string>
    <string name="investigators">Investigators</string>
    <string name="investigators_none">None</string>
    <string name="success_deleting_message">Result successfully deleated!</string>
    <string name="defeat_header">Defeat</string>
    <string name="win_header">Victory</string>
    <string name="defeat_by_elimination">All investigators have been eliminated</string>
    <string name="defeat_by_mythos_depletion">A Mythos card cannot be drawn</string>
    <string name="defeat_by_awakened_ancient_one">Indication on the Ancient One sheet</string>

    <string name="add_new_game">Create a new game</string>
    <string name="edit_game">Edit game</string>
    <string name="dialogBackAlert">Unsaved data will be lost!</string>
    <string name="backDialogMessage">Do you want to leave?</string>
    <string name="edit_expansion">Edit the list of expansion</string>
    <string name="expansion_list_header">Select expansions</string>
    <string name="games_count">Total number of games</string>
    <string name="best_result">Best result</string>
    <string name="worst_result">Worst result</string>
    <string name="about">About</string>
    <string name="donate">Donate now</string>
    <string name="version_header">v.\u0020</string>

    <string name="donate_message">To get full access for 24 hours play ad video</string>
    <string name="view_question">Play now?</string>
    <string name="view_error">Не удалось загрузить рекламный ролик\nПредоставлен кратковременный доступ</string>
    <string name="view_success">Получен доступ на 24 часа</string>

    <string name="authors_header">Created by</string>
    <string name="development_header">Developed by</string>
    <string name="developer">Argajasha</string>
    <string name="translation_header">Translated by</string>
    <string name="translator">brainstorm</string>

    <string name="rate_title">Please rate app</string>
    <string name="rate_massage">If you enjoy using Eldritch Horror Assistant, please take a moment to rate it.\nThanks for your support!</string>
    <string name="rate_error">Error open app page</string>
    <string name="message_rate">Rate now</string>
    <string name="message_later">Remind Me Later</string>

    <string name="message_starting">So far there are no results of the game.\nTo add the result of the game, click on the big orange button.</string>

    <string name="random_button_header">Random selection</string>
    <string name="alert_investigators_limit">"Number of initial investigators exceeded!"</string>
    <string name="sort_mode_message_1">"Sort by date descending"</string>
    <string name="sort_mode_message_2">"Sort by date ascending"</string>
    <string name="sort_mode_message_3">"Sort by Ancient One"</string>
    <string name="sort_mode_message_4">"Sort by score descending"</string>
    <string name="sort_mode_message_5">"Sort by score ascending"</string>

    <string name="solved_mysteries_header">"Number of solved mysteries"</string>

    <string name="sign_out_menu_header">Sign Out</string>

    <string name="prelude_header">Prelude</string>

    <string name="auth_error">Authentication failed</string>

    <string name="auth_header">Sign in</string>
    <string name="statistics_header">Statistics</string>
    <string name="statistics_none">No data</string>
    <string name="win_defeat_stat_description">Victory/Defeat</string>
    <string name="win_stat_label">Victory</string>
    <string name="defeat_stat_label">Defeat</string>

    <string name="all_results">All results</string>
    <string name="other_results">Others</string>
    <string name="last_game_header">Last game</string>
    <string name="popular_investigators_header">Popular investigators</string>
</resources>