<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:layout_marginTop="1dp">

        <android.support.v7.widget.CardView
            android:id="@+id/starting_data_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            cardCornerRadius="0dp"
            cardBackgroundColor="@color/colorAccentLight">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/activity_add_party_header" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/starting_data_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:elevation="2dp"
            cardCornerRadius="0dp"
            cardBackgroundColor="@color/colorText" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/dateField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/dateImgBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        app:srcCompat="@drawable/calendar" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ancientOne"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/ancientOneSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:dropDownWidth="match_parent"
                        android:gravity="end" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/playersCount"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/playersCountSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:dropDownWidth="match_parent"
                        android:gravity="end" />

                </TableRow>
            </TableLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v7.widget.CardView>